--- a/client-app/public/index.html
+++ b/client-app/public/index.html
@@ -11,9 +11,13 @@
     />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script
+      src="https://kit.fontawesome.com/717a2f20cc.js"
+      crossorigin="anonymous"
+    ></script>
     <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
+      href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"
     />
     <title>مدیریت اجاره خودرو آرتـــا</title>
   </head>
